[workspace]
[package]
version = "0.1.0"
name = "zkm-script"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
zkm-prover = { git = "https://github.com/zkMIPS/zkm", branch = "main", default-features = false }
zkm-emulator = { git = "https://github.com/zkMIPS/zkm", branch = "main", default-features = false }
plonky2 = { git = "https://github.com/zkMIPS/plonky2.git", branch = "zkm_dev" }
#starky = { git = "https://github.com/zkMIPS/plonky2.git", branch = "zkm_dev" }
plonky2_util = { git = "https://github.com/zkMIPS/plonky2.git", branch = "zkm_dev" }
plonky2_maybe_rayon = { git = "https://github.com/zkMIPS/plonky2.git", branch = "zkm_dev" }
plonky2_field = { git = "https://github.com/zkMIPS/plonky2.git", branch = "zkm_dev" }

log = { version = "0.4.14", default-features = false }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5.0"
hex = "0.4"
env_logger = "0.11.5"

rustacuda = { version = "0.1.3", optional = true }
rustacuda_core = { version = "0.1.2", optional = true }

[features]
test = []
gpu = ["plonky2/cuda", "plonky2_field/cuda", "rustacuda", "rustacuda_core"]
cpu = []
cuda = []

[patch.'https://github.com/zkMIPS/plonky2']
plonky2 = {             path = "../../plonky2-gpu/plonky2" }
plonky2_util = {        path = "../../plonky2-gpu/util" }
plonky2_maybe_rayon = { path = "../../plonky2-gpu/maybe_rayon" }
plonky2_field = {       path = "../../plonky2-gpu/field" }

[patch.'https://github.com/zkMIPS/zkm']
zkm-prover = { path = "../../zkm/prover" }
zkm-emulator = { path = "../../zkm/emulator" }